03.k3s-cluster/03.postgres/pgweb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgweb
  namespace: postgres
  labels:
    app.kubernetes.io/name: pgweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pgweb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgweb
    spec:
      containers:
        - name: pgweb
          image: sosedoff/pgweb:0.17.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          args:
            - --bind=0.0.0.0
            - --port=8080
            - --host=$(PGHOST)
            - --db=$(PGDATABASE)
            - --user=$(PGUSER)
            - --pass=$(PGPASSWORD)
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
