03.k3s-cluster/03.postgres/pgweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgweb
  namespace: postgres
  labels:
    app.kubernetes.io/name: pgweb
spec:
  selector:
    app.kubernetes.io/name: pgweb
  ports:
    - name: http
      port: 8080
      targetPort: http
