03.k3s-cluster/03.postgres/pgweb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgweb
  namespace: postgres
  labels:
    app.kubernetes.io/name: pgweb
  annotations:
    tailscale.com/proxy-group: private-ingress-proxies
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - pgweb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgweb
                port:
                  number: 8080
